--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,22 @@ p {
   display: block;
 }
 
-input[type="text"],
+input[type="text"] {
+  padding: 8px 6px 8px 10px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid tomato;
+  font-size: 14px;
+  line-height: 20px;
+  align-self: center;
+  height: 38px;
+}
+
 input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   font-size: 14px;
   line-height: 20px;
   align-self: center;
@@ -41,7 +51,7 @@ input[type="number"] {
   flex-direction: column;
   flex-basis: 300px;
   max-width: 300px;
-  margin: auto;
+  margin: 20px auto 50px;
   position: relative;
 }
 
@@ -69,16 +79,21 @@ input[type="number"] {
 }
 
 .suggestions > li:hover {
-  background-color: #bcdcdb;
+  background-color: rgb(250, 147, 128);
 }
 
 .event {
-  padding: 10px 10px 35px;
+  padding: 10px 20px 35px;
   margin-bottom: 10px;
   text-align: left;
-  border: 1px solid #ccc;
+  border: 3px solid black;
   border-radius: 4px;
   position: relative;
+}
+
+.event:hover {
+  border: 10p;
+  border-color: tomato;
 }
 
 .details-btn {
@@ -113,7 +128,7 @@ input[type="number"] {
 .numberOfEvents {
   width: 200px;
   margin: 20px auto;
-  text-align: center;
+  text-align: left;
 }
 
 .button-wrapper {
@@ -193,6 +208,92 @@ input[type="number"] {
   letter-spacing: 0.2px;
   font-family: "Roboto";
 }
+
+/* Button */
+
+.btn {
+  overflow: visible;
+  margin-top: 20px;
+  padding: 0;
+  border: 0;
+  background: transparent;
+  font: inherit;
+  line-height: normal;
+  cursor: pointer;
+  -moz-user-select: text;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 16px 36px 22px;
+  background-color: #fff;
+  color: tomato;
+  border: 2px solid tomato;
+  border-radius: 6px;
+  margin-bottom: 16px;
+  transition: all 0.5s ease;
+}
+.btn:-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+.btn--stripe {
+  overflow: hidden;
+  position: relative;
+}
+.btn--stripe:after {
+  content: "";
+  display: block;
+  height: 7px;
+  width: 100%;
+  background-image: repeating-linear-gradient(
+    45deg,
+    tomato,
+    tomato 1px,
+    transparent 2px,
+    transparent 5px
+  );
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-top: 1px solid tomato;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-size: 7px 7px;
+}
+.btn--stripe:hover {
+  background-color: tomato;
+  color: #fff;
+  border-color: tomato;
+}
+.btn--stripe:hover:after {
+  background-image: repeating-linear-gradient(
+    45deg,
+    #fff,
+    #fff 1px,
+    transparent 2px,
+    transparent 5px
+  );
+  border-top: 1px solid tomato;
+  animation: stripe-slide 12s infinite linear forwards;
+}
+.btn--large {
+  width: 50%;
+}
+.btn--radius {
+  border-radius: 36px;
+}
+
+@keyframes stripe-slide {
+  0% {
+    background-position: 0% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+/* Media Queries */
+
 @media only screen and (min-width: 992px) {
   .data-vis-wrapper {
     flex-direction: row;
