--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,21 @@ input[type="text"] {
   height: 38px;
 }
 
+.end-time {
+  text-align: right;
+}
+.time-zone {
+  text-align: right;
+}
+.organizer-email {
+  text-align: right;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
@@ -41,6 +56,13 @@ input[type="number"] {
   line-height: 20px;
   align-self: center;
   height: 38px;
+}
+
+.meet-title {
+  text-align: center;
+  color: tomato;
+  font-weight: bolder;
+  font-size: 50px;
 }
 
 .city {
@@ -291,6 +313,59 @@ input[type="number"] {
   }
   100% {
     background-position: 100% 0;
+  }
+}
+
+svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 740px;
+  height: 140px;
+  transform: translate(-50%, -50%);
+}
+
+.path {
+  stroke-dashoffset: 0;
+  stroke-dasharray: 100%;
+  animation: dash 4.5s linear;
+}
+
+.path:nth-child(10) {
+  animation-delay: -2s;
+}
+.path:nth-child(9) {
+  animation-delay: -1.75s;
+}
+.path:nth-child(8) {
+  animation-delay: -1.5s;
+}
+.path:nth-child(7) {
+  animation-delay: -1.5s;
+}
+.path:nth-child(6) {
+  animation-delay: -1.25s;
+}
+.path:nth-child(5) {
+  animation-delay: -1s;
+}
+.path:nth-child(4) {
+  animation-delay: -0.75s;
+}
+.path:nth-child(3) {
+  animation-delay: -0.5s;
+}
+.path:nth-child(2) {
+  animation-delay: -0.25s;
+}
+
+@keyframes dash {
+  0%,
+  50% {
+    stroke-dashoffset: 100%;
+  }
+  to {
+    stroke-dashoffset: 0;
   }
 }
 
